# trajectories-totg

./: CMakeLists.txt  Example2.cpp  Example2.cpp.1  package.xml  trajectory_results.csv  waypoints.csv
include/trajectories-totg/: Path.h  Trajectory.h
scripts/: plot.py  plot.py.1  plot.py.2
src/: Path.cpp  Trajectory.cpp  totg_svc.cpp  totg_svc_noclass.cpp
src/examples/: Example.cpp  Example2.cpp
